github/workflows: Fix code-size CI workflow.
Changes are:
- Use ubuntu-20.04 so that gcc-multilib installs without error.
- Use "fetch-depth: 100" to get history prior to pull request.

Change-Id: I473f0fb65d1d3dfea3090e431a11e462e76e2594
Signed-off-by: Damien George <damien@micropython.org>

--- a/.github/workflows/code_size.yml
+++ b/.github/workflows/code_size.yml
@@ -14,9 +14,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 100
     - name: Update package list
       run: sudo apt-get update -qq || true
     - name: Install packages
