--- a/.github/workflows/travis-ci.yml
+++ b/.github/workflows/travis-ci.yml
@@ -125,6 +125,8 @@ jobs:
         tests/run-tests --print-failures
 
   stm32-port-build:
+    # Rely on separate upstream action.
+    if: false
     runs-on: ubuntu-16.04
     steps:
     - name: Clone
